<?xml version="1.0"?>
<package format="2">
  <name>flir_camera_driver</name>
  <version>0.1.3</version>
  <description>A set of drivers for Flir cameras based on the Spinnaker SDK.</description>

  <author>N/A</author>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>spinnaker_camera_driver</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
