<?xml version="1.0"?>
<package>
  <name>image_exposure_msgs</name>
  <version>0.13.4</version>
  <description>Messages related to camera image exposure.</description>

  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>

  <license>BSD</license>

  <author email="chad@chaddev.com">Chad Rockey</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>statistics_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>statistics_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export></export>
</package>
