<?xml version="1.0"?>
<package>
  <name>wfov_camera_msgs</name>
  <version>0.13.4</version>
  <description>Messages related to wide field-of-view camera drivers.</description>

  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>

  <license>BSD</license>

  <author>Chad Rockey</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export></export>
</package>
